--- a/src/BcBundle/Resources/config/validation.yml
+++ b/src/BcBundle/Resources/config/validation.yml
@@ -37,3 +37,28 @@ BcBundle\Entity\Libro:
             - Lenght: 
                 min: 13
                 minMessage: "El ISBN debe tener 13 caracteres"
+        titulo:
+            - NotBlank: {message: "El título no puede estar vacío" }
+        fechpublic:
+            - NotBlank: {message: "La fecha de publicación no puede estar vacía" }
+        portada:
+            - NotBlank: {message: "La portada no puede estar vacía" }
+        autor:
+            - NotBlank: {message: "El autor del libro no puede estar vacío" }
+        categoria:
+            - NotBlank: {message: "La categoría no puede estar vacía" }
+
+BcBundle\Entity\Autor:
+    properties:
+        nombre:
+            - NotBlank: {message: "El nombre no puede estar vacío" }
+            - Length:
+                min: 5
+                minMessage: "El nombre debe tener mínimo 5 caracteres"
+        apellido:
+            - NotBlank: {message: "El apellido no puede estar vacío" }
+            - Length:
+                min: 5
+                minMessage: "El apellido debe tener mínimo 5 caracteres"
+        foto:
+            - NotBlank: {message: "La foto no puede estar vacía" }
