--- a/src/BcBundle/Resources/config/routing.yml
+++ b/src/BcBundle/Resources/config/routing.yml
@@ -10,6 +10,18 @@ bc_index_libro:
     path: /libro
     defaults: { _controller: BcBundle:Libro:indexLibro }
     
+bc_index_libroValid:
+    path: /libroValid
+    defaults: { _controller: BcBundle:Libro:indexLibro }
+    
+bc_edit_libro:
+    path: /libro/edit/{id}
+    defaults: { _controller: BcBundle:Libro:editLibro }    
+
+bc_val_libro:
+    path: /libro/val/{id}
+    defaults: { _controller: BcBundle:Libro:valLibro }
+
 bc_delete_libro:
     path: /libro/delete/{id}
     defaults: { _controller: BcBundle:Libro:delLibro}
@@ -21,7 +33,11 @@ bc_add_autor:
 bc_index_autor:
     path: /autor
     defaults: { _controller: BcBundle:Autor:indexAutor }
-    
+
+bc_edit_autor:
+    path: /autor/edit/{id}
+    defaults: { _controller: BcBundle:Autor:editAutor }   
+   
 bc_delete_autor:
     path: /autor/delete/{id}
     defaults: { _controller: BcBundle:Autor:delAutor }
@@ -35,8 +51,12 @@ bc_index_libreria:
     defaults: { _controller: BcBundle:Libreria:indexLibreria }
 
 bc_delete_libreria:
-    path: /autor/libreria/{id}
+    path: /autor/libreria/delete/{id}
     defaults: { _controller: BcBundle:Libreria:delLibreria }
+    
+bc_edit_libreria:
+    path: /autor/libreria/edit/{id}
+    defaults: { _controller: BcBundle:Libreria:editLibreria }
 
 login:
     path: /login
@@ -51,3 +71,7 @@ logout:
 bc_menu:
     path: /menu
     defaults: { _controller: BcBundle:Default:menu}
+    
+bc_menu:
+    path: /menu/find
+    defaults: { _controller: BcBundle:Default:indexFind}
