--- a/src/BcBundle/Resources/config/routing.yml
+++ b/src/BcBundle/Resources/config/routing.yml
@@ -37,7 +37,7 @@ bc_index_autor:
 bc_edit_autor:
     path: /autor/edit/{id}
     defaults: { _controller: BcBundle:Autor:editAutor }   
-   
+  
 bc_delete_autor:
     path: /autor/delete/{id}
     defaults: { _controller: BcBundle:Autor:delAutor }
@@ -51,13 +51,21 @@ bc_index_libreria:
     defaults: { _controller: BcBundle:Libreria:indexLibreria }
 
 bc_delete_libreria:
-    path: /autor/libreria/delete/{id}
+    path: /libreria/delete/{id}
     defaults: { _controller: BcBundle:Libreria:delLibreria }
     
 bc_edit_libreria:
-    path: /autor/libreria/edit/{id}
+    path: /libreria/edit/{id}
     defaults: { _controller: BcBundle:Libreria:editLibreria }
 
+bc_index_listadolibros:
+    path: /listadolibro/index/{id}
+    defaults: { _controller: BcBundle:Listadolibro:indexListadolibro }
+    
+bc_index_stocks:
+    path: /stock/index/{id}
+    defaults: { _controller: BcBundle:Stock:indexStock }    
+    
 login:
     path: /login
     defaults: { _controller: BcBundle:Usuario:login }
