--- a/src/BcBundle/Resources/config/doctrine/Libro.orm.yml
+++ b/src/BcBundle/Resources/config/doctrine/Libro.orm.yml
@@ -1,6 +1,7 @@
 BcBundle\Entity\Libro:
     type: entity
     table: libro
+    repositoryClass: BcBundle\Repository\LibroRepository
     indexes:
         autor:
             columns:
